src/pages/about/about.scss
.about {
  display: inline-flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-start;
  position: absolute;
  top: 200px;
  left: 45px;
  padding: 5px;

  & > span {
    margin-bottom: 5px;
  }
}

.kwd {
  color: #51c49f;
}

.normal {
  color: #333;
}

$green-1: #51c49f;
$green-2: #82d5bb;
$green-3: #9ddec9;
$green-4: #c2eade;
$green-5: #f1fffa;

.gridLine {
  display: flex;
  justify-content: space-between;
  background: $green-5;
}

.gridLineHor {
  flex-direction: column;
};

.vertical {
  width: 2px;
  height: 100%;
  background: $green-4;
}
.horizontal {
  width: 100%;
  height: 1px;
  background: $green-4;
}

@media (max-width: 500px) {
  .about {
    top: unset;
    bottom: 50px;
  }
}

